--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-easy-grid": "^0.2.2",
-    "react-native-web": "^0.11.7"
+    "react-native-gesture-handler": "~1.3.0",
+    "react-native-web": "^0.11.7",
+    "react-navigation": "^4.0.10"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
